<resources>
    <string name="app_name">YCBleSdkDemo</string>
    <string name="rtk_dfu_file_size">%d Bytes</string>
    <string name="rtk_dfu_detail_file_info_sub_file_type">Model：</string>
    <string name="rtk_dfu_detail_file_info_sub_file_version">Version：</string>
    <string name="rtk_dfu_detail_file_info_sub_file_size">Size：</string>
    <string name="rtk_dfu_image_section_size">Partition size:</string>
    <string name="header_title_dfu_file_info">File detail</string>
    <string name="rtk_dfu_text_file_path">File Path</string>
    <string name="rtk_dfu_text_file_name">File Name</string>
    <string name="rtk_dfu_text_file_type">File Type</string>
    <string name="rtk_dfu_text_file_size">File size</string>
    <string name="rtk_dfu_text_target_device">Device</string>
    <string name="rtk_dfu_text_file_upload_content">Update Content</string>
    <string name="rtk_dfu_text_file_image_size">Image Size</string>
    <string name="rtk_dfu_text_file_image_version">Image Version</string>
    <string name="rtk_dfu_text_file_status">State</string>
    <string name="rtk_dfu_text_file_ic_type">Type</string>
    <string name="rtk_dfu_title_device_info">Device Info</string>
    <string name="rtk_dfu_title_file_content">File Content</string>
    <string name="rtk_dfu_title_work_mode">Work mode</string>
    <string name="rtk_dfu_text_target_name">Target Name</string>
    <string name="rtk_dfu_text_target_bd_address">Address</string>
    <string name="rtk_dfu_text_battery_level">Battery</string>
    <string name="rtk_dfu_text_target_device_mac">MAC</string>
    <string name="rtk_dfu_text_target_link_key">Link Key</string>
    <string name="rtk_dfu_text_target_old_fw_version">Version:</string>
    <string name="rtk_dfu_text_target_old_patch_version">Versio Patch</string>
    <string name="rtk_dfu_text_target_patch_extend_version">Extend Patch</string>
    <string name="rtk_dfu_text_target_ic_type">IC type</string>
    <string name="rtk_dfu_text_target_protocol_type">Protocol type</string>
    <string name="rtk_dfu_text_target_update_mechanism">Update Mechaninsm</string>
    <string name="rtk_dfu_text_target_bank">Update target bank</string>
    <string name="rtk_dfu_text_target_pactch_bank">Target Patch Bank</string>
    <string name="rtk_dfu_text_target_Aes_Mode">AES Mode</string>
    <string name="rtk_dfu_text_target_buffer_check_mode">Buffer Check</string>
    <string name="rtk_dfu_text_target_max_buffer_size">Max Buffer Check</string>
    <string name="rtk_dfu_text_target_appData0_version">App Data0 Version</string>
    <string name="rtk_dfu_text_target_appData1_version">App Data1 Version</string>
    <string name="rtk_dfu_text_target_appData2_version">App Data2 Version</string>
    <string name="rtk_dfu_text_target_appData3_version">App Data3 Version</string>
    <string name="rtk_dfu_file_status_ok">OK</string>
    <string name="rtk_dfu_file_status_no_file">File not loaded</string>
    <string name="rtk_dfu_file_version_text_detail">File detail</string>
    <string name="rtk_dfu_work_mode_normal">Normal Update</string>
    <string name="rtk_dfu_work_mode_extension">Update external flash</string>
    <string name="rtk_dfu_work_mode_slient">Silent update</string>
    <string name="rtk_dfu_work_mode_silent_no_temp">No Temp</string>
    <string name="rtk_dfu_work_mode_unknown">Unknown</string>
    <string name="rtk_dfu_file_type_single">Single file</string>
    <string name="rtk_dfu_file_type_pack">File</string>
    <string name="rtk_dfu_file_content_type_full">Full</string>
    <string name="rtk_dfu_file_type_merge_patch">Merge Patch</string>
    <string name="rtk_dfu_file_type_merge_app">Merge App</string>
    <string name="rtk_dfu_file_type_merge_user_data">Merge User data</string>
    <string name="rtk_dfu_file_type_merge_patch_extension">Merge Patch Extension</string>
    <string name="rtk_dfu_file_type_merge_config_file">Merge Config file</string>
    <string name="rtk_dfu_file_type_merge_external_flash_image">Merge External Flash image</string>
    <string name="rtk_dfu_file_type_unknown">Unknown</string>
    <string name="rtk_dfu_unknown_device">Unknown device</string>
    <string name="rtk_dfu_scanner_title">Select device to update：</string>
    <string name="rtk_dfu_scanner_empty">No device found</string>
    <string name="rtk_dfu_scanner_action_scan">Search</string>
    <string name="rtk_dfu_scanner_action_cancel">Cancel</string>
    <string name="rtk_dfu_scanner_subtitle_bonded">Paired device：</string>
    <string name="rtk_dfu_scanner_subtitle_not_bonded">Available device：</string>
    <string name="rtk_dfu_progress_state_origin">Ready to update</string>
    <string name="rtk_dfu_state_known">Unknown</string>
    <string name="rtk_dfu_state_origin">Initializing</string>
    <string name="rtk_dfu_state_initialize">Initialize &#8230;</string>
    <string name="rtk_dfu_state_start">Initializing &#8230;</string>
    <string name="rtk_dfu_state_remote_enter_ota">Enter in update mode&#8230;</string>
    <string name="rtk_dfu_state_find_ota_remote">Search device&#8230;</string>
    <string name="rtk_dfu_state_connect_ota_remote">Connect device&#8230;</string>
    <string name="rtk_dfu_state_prepare_dfu_processing">Prepare to upgrade your environment &#8230;</string>
    <string name="rtk_dfu_state_start_ota_processing">Upgrading&#8230;</string>
    <string name="rtk_dfu_state_hand_over_processing">HandOver&#8230;</string>
    <string name="rtk_dfu_state_ota_send_file">Sending file %1$d/%2$d &#8230;</string>
    <string name="rtk_dfu_state_upgrade_success">Update successes</string>
    <string name="rtk_dfu_state_pending_active_image">Waiting firmware to active &#8230;</string>
    <string name="rtk_dfu_state_start_active_image">Firmware is activating &#8230;</string>
    <string name="rtk_dfu_state_image_active_success">Firmware activated successfully</string>
    <string name="rtk_dfu_state_abort_processing">Pending cancelation…</string>
    <string name="rtk_dfu_state_error_processing">Handle errors…</string>
    <string name="rtk_dfu_state_aborted">Aborted</string>
    <string name="rtk_dfu_state_scan_secondary_bud">Searching for secondary ear device …</string>
    <string name="rtk_dfu_toast_error_message">Error code：%1$s\nOverview：%2$s\nDetails：%3$s</string>
    <string name="rtk_dfu_toast_connection_error_message">The initial connection to the peer device is abnormal,\n%s</string>
    <string name="rtk_dfu_toast_ota_is_processing">Firmware upgrade in progress</string>
    <string name="rtk_dfu_toast_ota_is_processing_exist">Firmware upgrade in progress，Are you sure you want to quit?</string>
    <string name="rtk_dfu_toast_no_ble">BLE device is not supported</string>
    <string name="rtk_dfu_toast_bt_enabled">Bluetooth on</string>
    <string name="rtk_dfu_toast_bt_not_enabled">Bluetooth is not enabled</string>
    <string name="rtk_dfu_toast_connect_device">Working on device：%1$s To establish connection，Just a moment please…</string>
    <string name="rtk_dfu_toast_operation_failed">Operation failed</string>
    <string name="rtk_dfu_toast_no_device">Device not connected</string>
    <string name="rtk_dfu_fc_undefined">Undefined</string>
    <string name="rtk_dfu_fc_pack_loss">No upgradable files found</string>
    <string name="rtk_dfu_fc_pack_loss_empty">Package file cannot be empty</string>
    <string name="rtk_dfu_fc_pack_duplicate_bank">The bank of the selected file is the same as the current device bank area</string>
    <string name="rtk_dfu_fc_pack_loss_ota_header">No package file OTA Header</string>
    <string name="rtk_dfu_fc_pack_loss_rom_patch">No package file Rom Patch</string>
    <string name="rtk_dfu_fc_pack_loss_app_image">No package file App Image</string>
    <string name="rtk_dfu_fc_pack_loss_low_version">Firmware version is lower，No upgradeable files</string>
    <string name="rtk_dfu_fc_pack_nt">Packed files are not supported</string>
    <string name="rtk_dfu_fc_pack_nt_ota_header">Does not support containing OTA Header package file</string>
    <string name="rtk_dfu_fc_pack_nt_bank_switch">The selected file does not support bank switching</string>
    <string name="rtk_dfu_fc_single_nt">The selected file is not a package file</string>
    <string name="rtk_dfu_update_mechanism_one_by_one">One By One</string>
    <string name="rtk_dfu_update_mechanism_all_in_one">All In One</string>
    <string name="rtk_dfu_update_mechanism_all_in_one_with_buffer">All In One With Buffer</string>
    <string name="rtk_dfu_connection_state_no_device">No equipment</string>
    <string name="rtk_dfu_connection_state_connecting">Connecting…</string>
    <string name="rtk_dfu_connection_state_disconnected">Disconnected</string>
    <string name="rtk_dfu_connection_state_connected">Connected</string>
    <string name="rtk_dfu_connection_state_discovering_services">Searching devices…</string>
    <string name="rtk_dfu_connection_state_request_mtu">Searching MTU …</string>
    <string name="rtk_dfu_connection_state_set_perfered_phy">Config PHY …</string>
    <string name="rtk_dfu_connection_state_enable_cccd">Enabling CCCD …</string>
    <string name="rtk_dfu_connection_state_not_supported">Not support </string>
    <string name="rtk_dfu_connection_state_disconnecting">Disconnecting…</string>
    <string name="rtk_dfu_no_available_upload_file">No upgradeable files</string>
    <string name="rtk_dfu_action_reset">Reset</string>
    <string name="rtk_dfu_action_disconnect">Diconnect</string>
    <string name="rtk_dfu_action_submit">Submit</string>
    <string name="rtk_ota_state_known">Unknown</string>
    <string name="rtk_ota_state_oritin">origin</string>
    <string name="rtk_ota_state_bind_service">bind service ...</string>
    <string name="rtk_ota_state_init_ok">initialized</string>
    <string name="rtk_ota_state_preparing">preparing ...</string>
    <string name="rtk_ota_state_connecting">connecting ...</string>
    <string name="rtk_ota_state_process_pair_request">pair request ...</string>
    <string name="rtk_ota_state_pending_discover_service">pending discover service ...</string>
    <string name="rtk_ota_state_discover_service">discover service ...</string>
    <string name="rtk_ota_state_read_device_info">read device info ...</string>
    <string name="rtk_ota_state_read_protocol_type">read protocol info ...</string>
    <string name="rtk_ota_state_read_image_info">read image info ...</string>
    <string name="rtk_ota_state_read_battery_info">read battery info ...</string>
    <string name="rtk_ota_state_prepared">connected.</string>
    <string name="rtk_ota_state_ota_processing">ota processing ...</string>
    <string name="pref_title_dfu_file_suffix">File extension</string>
    <string name="pref_category_title_normal_mode">Normal upgrade</string>
    <string name="pref_title_dfu_handover_timeout">Handover timeout(second）</string>
    <string name="ai_go">AI diagnosis</string>
    <string name="record">Record</string>
    <string name="sync">Sync</string>
    <string name="ecg_measure_bpm_text">--</string>
    <string name="ecg_measure_bpm_unit">bpm</string>
    <string name="ecg_measure_mmhg_text">--/--</string>
    <string name="ecg_measure_mmhg_unit">mmHg</string>
    <string name="ecg_measure_hrv_text">--</string>
    <string name="ecg_measure_hrv_unit">HRV</string>
    <string name="ecg_measure_electric_on">Good electrode contact</string>
    <string name="ecg_measure_electric_off">Electrode falls off</string>
    <string name="ecg_measure_start">Start</string>
    <string name="ecg_measure_progress_text">0%</string>
    <string name="ecg_measure_dialog_hint_text">wearing tips</string>
    <string name="ecg_measure_dialog_marked_words_text">please wear the bracelet, Keep the back metal tab close to the skin, and make your finger touch the metal sheet on the bracelet</string>
    <string name="ecg_measure_dialog_confirm_text">confirm</string>
</resources>