<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white_color">

        <com.example.ycblesdkdemo.view.NavigationBar
            android:id="@+id/navigationbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--心率数据-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_bpm"
                    fontPath="D-DINExp.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/ecg_measure_bpm_text"
                    android:textColor="@color/ecg_measure_value_text_color"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:text="@string/ecg_measure_bpm_unit"
                    android:textColor="@color/ecg_measure_unit_text_color"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_mmhg"
                    fontPath="D-DINExp.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/ecg_measure_mmhg_text"
                    android:textColor="@color/ecg_measure_value_text_color"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:text="@string/ecg_measure_mmhg_unit"
                    android:textColor="@color/ecg_measure_unit_text_color"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_hrv"
                    fontPath="D-DINExp.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/ecg_measure_hrv_text"
                    android:textColor="@color/ecg_measure_value_text_color"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:text="@string/ecg_measure_hrv_unit"
                    android:textColor="@color/ecg_measure_unit_text_color"
                    android:textSize="12dp" />

            </LinearLayout>


        </LinearLayout>

        <!--心电图-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <com.example.ycblesdkdemo.ecg.view.CarBgView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.example.ycblesdkdemo.ecg.view.CardiographView
                android:id="@+id/cardiographView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!--电极接触良好-->
            <LinearLayout
                android:id="@+id/ll_electric_on"
                android:layout_width="116dp"
                android:layout_height="33dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/ecg_electric_on_green_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@mipmap/ecg_electric_on" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/ecg_measure_electric_on"
                    android:textColor="@color/ecg_measure_electric_on_off_color"
                    android:textSize="12dp" />

            </LinearLayout>

            <!--电极脱落-->
            <LinearLayout
                android:id="@+id/ll_electric_off"
                android:layout_width="92dp"
                android:layout_height="33dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/ecg_electric_off_orange_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@mipmap/ecg_electric_off" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/ecg_measure_electric_off"
                    android:textColor="@color/ecg_measure_electric_on_off_color"
                    android:textSize="12dp" />

            </LinearLayout>

        </RelativeLayout>

        <!--进度条-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="280dp"
                    android:layout_height="56dp"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/ecg_measur_progress_circle_shade_color" />

                <TextView
                    android:id="@+id/tv_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:text="@string/ecg_measure_progress_text"
                    android:textColor="@color/ecg_measure_schedule_text_color"
                    android:textSize="22dp"
                    android:visibility="gone" />


                <ImageView
                    android:id="@+id/iv_stop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:padding="5dp"
                    android:src="@mipmap/ecg_electric_end"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_start_finish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/ecg_measure_start"
                    android:textColor="@color/ecg_measure_schedule_text_color"
                    android:textSize="22dp" />

            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>
    <!--    <include
            layout="@layout/dialog_ecg_measur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />-->
</RelativeLayout>